ci: adding app run

--- a/.github/workflows/01-manual-exec.yml
+++ b/.github/workflows/01-manual-exec.yml
@@ -18,6 +18,10 @@ jobs:
         working-directory: ./tests
         run: npm install
 
+      - name: iniciando backend project
+        working-directory: ./backend
+        run: node app.js
+
       - name: Testes API
         working-directory: ./tests
         run: npm test
