ci: adding push trigger and fix ubuntu version

--- a/.github/workflows/01-manual-exec.yml
+++ b/.github/workflows/01-manual-exec.yml
@@ -2,10 +2,12 @@ name: Execução Manual
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ main ]
 
 jobs:
-  e2e-tests:
-    runs-on: ubuntu-latest
+  api-tests:
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v3
@@ -21,9 +23,9 @@ jobs:
       - name: Iniciando backend em segundo plano
         working-directory: ./backend
         run: |
-          nohup node app.js &
+          nohup node app.js & sleep 5
 
-      - name: Testes API
+      - name: Executar Testes de API
         working-directory: ./tests
         run: npm test
 
